--- a/css/style.css
+++ b/css/style.css
@@ -199,13 +199,13 @@ span {
 @media only screen and (max-width: 1024px) {
   #lets-connect {
     margin-top: 5%;
-  };
+  }
 }
 
 @media only screen and (max-width:900px) {
   .biopic {
     width: 175px;
-  };
+  }
 }
 
 @media only screen and (max-width: 750px) {
@@ -219,7 +219,7 @@ span {
 
   .welcome-message {
     display: none;
-  };
+  }
 }
 
 #map {
@@ -239,7 +239,7 @@ span {
   #skills-h3,
   .biopic {
     display: block;
-  };
+  }
 }
 
 nu {
